Prevent the excerpt in items from overflowing.
Hopefully the last step to resolve #271

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -198,6 +198,7 @@ h3 {
 	color: #494949;
 	font-family: sans-serif;
 	padding: 3px;
+    overflow:hidden;
 }
 
 .grid .feed-item .item_excerpt {
